--- a/projectNotebook.ipynb
+++ b/projectNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,40 +13,17 @@
     "from sklearn.preprocessing import minmax_scale\n",
     "\n",
     "pd.set_option('display.max_columns',15)\n",
-    "import sklearn.preprocessing as sk"
+    "import sklearn.preprocessing as sk\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 31 entries, 0 to 30\n",
-      "Data columns (total 14 columns):\n",
-      "id                      31 non-null int64\n",
-      "sound_number            31 non-null int64\n",
-      "sound_valence_mean      31 non-null float64\n",
-      "sound_arousal_mean      31 non-null float64\n",
-      "is_sound_positive       31 non-null int64\n",
-      "is_sound_obscene        31 non-null int64\n",
-      "picture_number          31 non-null int64\n",
-      "picture_arousal_mean    31 non-null float64\n",
-      "picture_valence_mean    31 non-null float64\n",
-      "is_picture_positive     31 non-null int64\n",
-      "is_picture_obscene      31 non-null int64\n",
-      "not_processed_answer    31 non-null object\n",
-      "answer_valence          31 non-null float64\n",
-      "answer_arousal          31 non-null float64\n",
-      "dtypes: float64(6), int64(7), object(1)\n",
-      "memory usage: 3.6+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def preprocesProcedura(file):\n",
     "    data = pd.read_csv(file, sep=\"\\t\", header=None)\n",
@@ -167,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -274,25 +251,224 @@
      "output_type": "stream",
      "text": [
       "-21.479533237202027\n",
-      "0.4201679666178426\n"
+      "0.4201679666178426\n",
+      "Mean squared error: 4.04\n",
+      "Variance score: 0.42\n"
      ]
     }
    ],
    "source": [
     "from sklearn import linear_model\n",
-    "model = linear_model.LinearRegression(fit_intercept=False, normalize=False, copy_X=True, n_jobs=None) #fit intercept = false zwiekszylo\n",
-    "from sklearn import svm\n",
-    "#model = svm.LinearSVC()\n",
-    "#model = svm.SVC()\n",
-    "\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "model = linear_model.LinearRegression(fit_intercept=False, normalize=True, copy_X=True, n_jobs=None) #fit intercept = false zwiekszylo\n",
     "\n",
     "from sklearn.model_selection import cross_val_score\n",
     "cv_result=cross_val_score(model, train[all_features], train[target],cv=10) \n",
     "print(cv_result.mean())\n",
     "\n",
     "model.fit(train[all_features], train[target])\n",
-    "preds = model.predict(test[all_features])\n",
-    "print(model.score(test[all_features], test[target]))"
+    "predicted = model.predict(test[all_features])\n",
+    "\n",
+    "print(\"Mean squared error: %.2f\"\n",
+    "      % mean_squared_error(test[target], predicted))\n",
+    "# Explained variance score: 1 is perfect prediction\n",
+    "print('Variance score: %.2f' % r2_score(test[target], predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "def performLinearGridSearch(algo, params):\n",
+    "    clf = GridSearchCV(algo(), params, cv=5,\n",
+    "                   scoring='r2')\n",
+    "    clf.fit(train[all_features], train[target])\n",
+    "\n",
+    "    print(\"Best parameters set found on development set:\")\n",
+    "    print()\n",
+    "    print(clf.best_params_)\n",
+    "    print()\n",
+    "    print(\"Grid scores on development set:\")\n",
+    "    print()\n",
+    "    means = clf.cv_results_['mean_test_score']\n",
+    "    stds = clf.cv_results_['std_test_score']\n",
+    "    for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
+    "        print(\"%0.3f (+/-%0.03f) for %r\"\n",
+    "              % (mean, std * 2, params))\n",
+    "    print()\n",
+    "    return clf.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeScore(y_test, y_pred):\n",
+    "    \n",
+    "    \n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    print(\"Mean squared error: %.2f\"\n",
+    "      % mse)\n",
+    "    # Explained variance score: 1 is perfect prediction\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    print('Variance score: %.2f' % r2)\n",
+    "    return (mse, r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'copy_X': True, 'fit_intercept': False, 'normalize': True}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.095 (+/-0.620) for {'copy_X': True, 'fit_intercept': True, 'normalize': True}\n",
+      "0.095 (+/-0.620) for {'copy_X': True, 'fit_intercept': True, 'normalize': False}\n",
+      "0.141 (+/-0.202) for {'copy_X': True, 'fit_intercept': False, 'normalize': True}\n",
+      "0.141 (+/-0.202) for {'copy_X': True, 'fit_intercept': False, 'normalize': False}\n",
+      "0.095 (+/-0.620) for {'copy_X': False, 'fit_intercept': True, 'normalize': True}\n",
+      "0.095 (+/-0.620) for {'copy_X': False, 'fit_intercept': True, 'normalize': False}\n",
+      "0.141 (+/-0.202) for {'copy_X': False, 'fit_intercept': False, 'normalize': True}\n",
+      "0.141 (+/-0.202) for {'copy_X': False, 'fit_intercept': False, 'normalize': False}\n",
+      "\n",
+      "Mean squared error: 4.56\n",
+      "Variance score: 0.34\n",
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'alpha': 0.013738237958832637, 'fit_intercept': True}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.169 (+/-0.430) for {'alpha': 1e-05, 'fit_intercept': True}\n",
+      "0.140 (+/-0.107) for {'alpha': 1e-05, 'fit_intercept': False}\n",
+      "0.169 (+/-0.430) for {'alpha': 1.7433288221999873e-05, 'fit_intercept': True}\n",
+      "0.140 (+/-0.107) for {'alpha': 1.7433288221999873e-05, 'fit_intercept': False}\n",
+      "0.169 (+/-0.430) for {'alpha': 3.039195382313195e-05, 'fit_intercept': True}\n",
+      "0.140 (+/-0.107) for {'alpha': 3.039195382313195e-05, 'fit_intercept': False}\n",
+      "0.170 (+/-0.430) for {'alpha': 5.2983169062837125e-05, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 5.2983169062837125e-05, 'fit_intercept': False}\n",
+      "0.170 (+/-0.429) for {'alpha': 9.236708571873866e-05, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 9.236708571873866e-05, 'fit_intercept': False}\n",
+      "0.171 (+/-0.429) for {'alpha': 0.00016102620275609394, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 0.00016102620275609394, 'fit_intercept': False}\n",
+      "0.173 (+/-0.428) for {'alpha': 0.0002807216203941176, 'fit_intercept': True}\n",
+      "0.139 (+/-0.105) for {'alpha': 0.0002807216203941176, 'fit_intercept': False}\n",
+      "0.175 (+/-0.426) for {'alpha': 0.0004893900918477494, 'fit_intercept': True}\n",
+      "0.138 (+/-0.104) for {'alpha': 0.0004893900918477494, 'fit_intercept': False}\n",
+      "0.180 (+/-0.422) for {'alpha': 0.0008531678524172815, 'fit_intercept': True}\n",
+      "0.137 (+/-0.103) for {'alpha': 0.0008531678524172815, 'fit_intercept': False}\n",
+      "0.185 (+/-0.414) for {'alpha': 0.0014873521072935117, 'fit_intercept': True}\n",
+      "0.135 (+/-0.100) for {'alpha': 0.0014873521072935117, 'fit_intercept': False}\n",
+      "0.192 (+/-0.400) for {'alpha': 0.002592943797404667, 'fit_intercept': True}\n",
+      "0.132 (+/-0.095) for {'alpha': 0.002592943797404667, 'fit_intercept': False}\n",
+      "0.201 (+/-0.369) for {'alpha': 0.004520353656360245, 'fit_intercept': True}\n",
+      "0.124 (+/-0.085) for {'alpha': 0.004520353656360245, 'fit_intercept': False}\n",
+      "0.205 (+/-0.359) for {'alpha': 0.007880462815669913, 'fit_intercept': True}\n",
+      "0.108 (+/-0.073) for {'alpha': 0.007880462815669913, 'fit_intercept': False}\n",
+      "0.205 (+/-0.356) for {'alpha': 0.013738237958832637, 'fit_intercept': True}\n",
+      "0.086 (+/-0.073) for {'alpha': 0.013738237958832637, 'fit_intercept': False}\n",
+      "0.205 (+/-0.351) for {'alpha': 0.02395026619987486, 'fit_intercept': True}\n",
+      "0.085 (+/-0.072) for {'alpha': 0.02395026619987486, 'fit_intercept': False}\n",
+      "0.203 (+/-0.339) for {'alpha': 0.04175318936560404, 'fit_intercept': True}\n",
+      "0.087 (+/-0.072) for {'alpha': 0.04175318936560404, 'fit_intercept': False}\n",
+      "0.198 (+/-0.307) for {'alpha': 0.07278953843983153, 'fit_intercept': True}\n",
+      "0.087 (+/-0.080) for {'alpha': 0.07278953843983153, 'fit_intercept': False}\n",
+      "0.185 (+/-0.219) for {'alpha': 0.12689610031679235, 'fit_intercept': True}\n",
+      "0.084 (+/-0.093) for {'alpha': 0.12689610031679235, 'fit_intercept': False}\n",
+      "0.125 (+/-0.131) for {'alpha': 0.22122162910704501, 'fit_intercept': True}\n",
+      "0.083 (+/-0.118) for {'alpha': 0.22122162910704501, 'fit_intercept': False}\n",
+      "0.055 (+/-0.154) for {'alpha': 0.38566204211634725, 'fit_intercept': True}\n",
+      "0.074 (+/-0.145) for {'alpha': 0.38566204211634725, 'fit_intercept': False}\n",
+      "0.042 (+/-0.181) for {'alpha': 0.6723357536499335, 'fit_intercept': True}\n",
+      "0.054 (+/-0.192) for {'alpha': 0.6723357536499335, 'fit_intercept': False}\n",
+      "0.049 (+/-0.196) for {'alpha': 1.1721022975334818, 'fit_intercept': True}\n",
+      "0.020 (+/-0.260) for {'alpha': 1.1721022975334818, 'fit_intercept': False}\n",
+      "0.049 (+/-0.196) for {'alpha': 2.043359717856944, 'fit_intercept': True}\n",
+      "-0.065 (+/-0.435) for {'alpha': 2.043359717856944, 'fit_intercept': False}\n",
+      "0.050 (+/-0.194) for {'alpha': 3.562247890262444, 'fit_intercept': True}\n",
+      "-0.199 (+/-0.686) for {'alpha': 3.562247890262444, 'fit_intercept': False}\n",
+      "0.050 (+/-0.190) for {'alpha': 6.2101694189156165, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.676) for {'alpha': 6.2101694189156165, 'fit_intercept': False}\n",
+      "0.051 (+/-0.184) for {'alpha': 10.82636733874054, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.679) for {'alpha': 10.82636733874054, 'fit_intercept': False}\n",
+      "0.051 (+/-0.174) for {'alpha': 18.873918221350994, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.683) for {'alpha': 18.873918221350994, 'fit_intercept': False}\n",
+      "0.052 (+/-0.156) for {'alpha': 32.90344562312671, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.691) for {'alpha': 32.90344562312671, 'fit_intercept': False}\n",
+      "0.049 (+/-0.125) for {'alpha': 57.361525104486816, 'fit_intercept': True}\n",
+      "-0.212 (+/-0.706) for {'alpha': 57.361525104486816, 'fit_intercept': False}\n",
+      "0.036 (+/-0.073) for {'alpha': 100.0, 'fit_intercept': True}\n",
+      "-0.216 (+/-0.731) for {'alpha': 100.0, 'fit_intercept': False}\n",
+      "\n",
+      "Mean squared error: 4.44\n",
+      "Variance score: 0.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "alphas = np.logspace(-5, 2, 30)\n",
+    "\n",
+    "models_params = [(\n",
+    "    linear_model.LinearRegression, {'fit_intercept':[True,False], 'normalize':[True,False], 'copy_X':[True, False]}), \n",
+    "    (linear_model.Lasso, {'alpha': alphas, 'fit_intercept': [True, False]}), \n",
+    "    (linear_model.ElasticNet, {'alpha': alphas, 'fit_intercept': [True, False]})]\n",
+    "\n",
+    "for m,p in models_params:\n",
+    "    bp = performLinearGridSearch(m, p)\n",
+    "    if m == linear_model.LinearRegression:\n",
+    "        model = m(bp)\n",
+    "    else:\n",
+    "        model = linear_model.Lasso(alpha=0.0137, fit_intercept=True)\n",
+    "    \n",
+    "    model.fit(train[all_features], train[target])\n",
+    "    predicted = model.predict(test[all_features])\n",
+    "    computeScore(test[target], predicted)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.00000000e-05, 1.74332882e-05, 3.03919538e-05, 5.29831691e-05,\n",
+       "       9.23670857e-05, 1.61026203e-04, 2.80721620e-04, 4.89390092e-04,\n",
+       "       8.53167852e-04, 1.48735211e-03, 2.59294380e-03, 4.52035366e-03,\n",
+       "       7.88046282e-03, 1.37382380e-02, 2.39502662e-02, 4.17531894e-02,\n",
+       "       7.27895384e-02, 1.26896100e-01, 2.21221629e-01, 3.85662042e-01,\n",
+       "       6.72335754e-01, 1.17210230e+00, 2.04335972e+00, 3.56224789e+00,\n",
+       "       6.21016942e+00, 1.08263673e+01, 1.88739182e+01, 3.29034456e+01,\n",
+       "       5.73615251e+01, 1.00000000e+02])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alphas"
    ]
   },
   {
