--- a/projectNotebook.ipynb
+++ b/projectNotebook.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,87 @@
       "-0.216 (+/-0.731) for {'alpha': 100.0, 'fit_intercept': False}\n",
       "\n",
       "Mean squared error: 4.44\n",
-      "Variance score: 0.36\n"
+      "Variance score: 0.36\n",
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'alpha': 0.04175318936560404, 'fit_intercept': True}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.169 (+/-0.430) for {'alpha': 1e-05, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 1e-05, 'fit_intercept': False}\n",
+      "0.170 (+/-0.429) for {'alpha': 1.7433288221999873e-05, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 1.7433288221999873e-05, 'fit_intercept': False}\n",
+      "0.171 (+/-0.428) for {'alpha': 3.039195382313195e-05, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 3.039195382313195e-05, 'fit_intercept': False}\n",
+      "0.172 (+/-0.426) for {'alpha': 5.2983169062837125e-05, 'fit_intercept': True}\n",
+      "0.139 (+/-0.106) for {'alpha': 5.2983169062837125e-05, 'fit_intercept': False}\n",
+      "0.173 (+/-0.423) for {'alpha': 9.236708571873866e-05, 'fit_intercept': True}\n",
+      "0.138 (+/-0.105) for {'alpha': 9.236708571873866e-05, 'fit_intercept': False}\n",
+      "0.176 (+/-0.418) for {'alpha': 0.00016102620275609394, 'fit_intercept': True}\n",
+      "0.137 (+/-0.104) for {'alpha': 0.00016102620275609394, 'fit_intercept': False}\n",
+      "0.180 (+/-0.411) for {'alpha': 0.0002807216203941176, 'fit_intercept': True}\n",
+      "0.135 (+/-0.103) for {'alpha': 0.0002807216203941176, 'fit_intercept': False}\n",
+      "0.186 (+/-0.401) for {'alpha': 0.0004893900918477494, 'fit_intercept': True}\n",
+      "0.132 (+/-0.100) for {'alpha': 0.0004893900918477494, 'fit_intercept': False}\n",
+      "0.192 (+/-0.390) for {'alpha': 0.0008531678524172815, 'fit_intercept': True}\n",
+      "0.127 (+/-0.097) for {'alpha': 0.0008531678524172815, 'fit_intercept': False}\n",
+      "0.197 (+/-0.378) for {'alpha': 0.0014873521072935117, 'fit_intercept': True}\n",
+      "0.120 (+/-0.093) for {'alpha': 0.0014873521072935117, 'fit_intercept': False}\n",
+      "0.201 (+/-0.369) for {'alpha': 0.002592943797404667, 'fit_intercept': True}\n",
+      "0.109 (+/-0.089) for {'alpha': 0.002592943797404667, 'fit_intercept': False}\n",
+      "0.204 (+/-0.362) for {'alpha': 0.004520353656360245, 'fit_intercept': True}\n",
+      "0.098 (+/-0.085) for {'alpha': 0.004520353656360245, 'fit_intercept': False}\n",
+      "0.207 (+/-0.356) for {'alpha': 0.007880462815669913, 'fit_intercept': True}\n",
+      "0.092 (+/-0.081) for {'alpha': 0.007880462815669913, 'fit_intercept': False}\n",
+      "0.210 (+/-0.351) for {'alpha': 0.013738237958832637, 'fit_intercept': True}\n",
+      "0.088 (+/-0.076) for {'alpha': 0.013738237958832637, 'fit_intercept': False}\n",
+      "0.213 (+/-0.341) for {'alpha': 0.02395026619987486, 'fit_intercept': True}\n",
+      "0.088 (+/-0.071) for {'alpha': 0.02395026619987486, 'fit_intercept': False}\n",
+      "0.213 (+/-0.322) for {'alpha': 0.04175318936560404, 'fit_intercept': True}\n",
+      "0.090 (+/-0.066) for {'alpha': 0.04175318936560404, 'fit_intercept': False}\n",
+      "0.211 (+/-0.287) for {'alpha': 0.07278953843983153, 'fit_intercept': True}\n",
+      "0.093 (+/-0.069) for {'alpha': 0.07278953843983153, 'fit_intercept': False}\n",
+      "0.199 (+/-0.226) for {'alpha': 0.12689610031679235, 'fit_intercept': True}\n",
+      "0.092 (+/-0.082) for {'alpha': 0.12689610031679235, 'fit_intercept': False}\n",
+      "0.174 (+/-0.136) for {'alpha': 0.22122162910704501, 'fit_intercept': True}\n",
+      "0.087 (+/-0.097) for {'alpha': 0.22122162910704501, 'fit_intercept': False}\n",
+      "0.121 (+/-0.110) for {'alpha': 0.38566204211634725, 'fit_intercept': True}\n",
+      "0.085 (+/-0.118) for {'alpha': 0.38566204211634725, 'fit_intercept': False}\n",
+      "0.062 (+/-0.146) for {'alpha': 0.6723357536499335, 'fit_intercept': True}\n",
+      "0.078 (+/-0.140) for {'alpha': 0.6723357536499335, 'fit_intercept': False}\n",
+      "0.043 (+/-0.178) for {'alpha': 1.1721022975334818, 'fit_intercept': True}\n",
+      "0.065 (+/-0.176) for {'alpha': 1.1721022975334818, 'fit_intercept': False}\n",
+      "0.047 (+/-0.193) for {'alpha': 2.043359717856944, 'fit_intercept': True}\n",
+      "0.027 (+/-0.251) for {'alpha': 2.043359717856944, 'fit_intercept': False}\n",
+      "0.049 (+/-0.196) for {'alpha': 3.562247890262444, 'fit_intercept': True}\n",
+      "-0.043 (+/-0.395) for {'alpha': 3.562247890262444, 'fit_intercept': False}\n",
+      "0.049 (+/-0.194) for {'alpha': 6.2101694189156165, 'fit_intercept': True}\n",
+      "-0.181 (+/-0.653) for {'alpha': 6.2101694189156165, 'fit_intercept': False}\n",
+      "0.050 (+/-0.191) for {'alpha': 10.82636733874054, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.676) for {'alpha': 10.82636733874054, 'fit_intercept': False}\n",
+      "0.050 (+/-0.186) for {'alpha': 18.873918221350994, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.678) for {'alpha': 18.873918221350994, 'fit_intercept': False}\n",
+      "0.051 (+/-0.177) for {'alpha': 32.90344562312671, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.682) for {'alpha': 32.90344562312671, 'fit_intercept': False}\n",
+      "0.052 (+/-0.162) for {'alpha': 57.361525104486816, 'fit_intercept': True}\n",
+      "-0.211 (+/-0.689) for {'alpha': 57.361525104486816, 'fit_intercept': False}\n",
+      "0.050 (+/-0.135) for {'alpha': 100.0, 'fit_intercept': True}\n",
+      "-0.212 (+/-0.702) for {'alpha': 100.0, 'fit_intercept': False}\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'dict' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-74-fd84a233112e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mall_features\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mpredicted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mall_features\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mcomputeScore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/sklearn/linear_model/coordinate_descent.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, check_input)\u001b[0m\n\u001b[1;32m    760\u001b[0m                           \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    761\u001b[0m                           \u001b[0mselection\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 762\u001b[0;31m                           check_input=False)\n\u001b[0m\u001b[1;32m    763\u001b[0m             \u001b[0mcoef_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthis_coef\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    764\u001b[0m             \u001b[0mdual_gaps_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthis_dual_gap\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/sklearn/linear_model/coordinate_descent.py\u001b[0m in \u001b[0;36menet_path\u001b[0;34m(X, y, l1_ratio, eps, n_alphas, alphas, precompute, Xy, copy_X, coef_init, verbose, return_n_iter, positive, check_input, **params)\u001b[0m\n\u001b[1;32m    454\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    455\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 456\u001b[0;31m         \u001b[0ml1_reg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0ml1_ratio\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mn_samples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    457\u001b[0m         \u001b[0ml2_reg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1.0\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ml1_ratio\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mn_samples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    458\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mmulti_output\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0msparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misspmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict' and 'float'"
      ]
     }
    ],
@@ -429,10 +509,11 @@
     "\n",
     "for m,p in models_params:\n",
     "    bp = performLinearGridSearch(m, p)\n",
-    "    if m == linear_model.LinearRegression:\n",
-    "        model = m(bp)\n",
-    "    else:\n",
+    "    if m == linear_model.Lasso:\n",
     "        model = linear_model.Lasso(alpha=0.0137, fit_intercept=True)\n",
+    "    else:\n",
+    "        model = m(bp)\n",
+    "\n",
     "    \n",
     "    model.fit(train[all_features], train[target])\n",
     "    predicted = model.predict(test[all_features])\n",
