--- a/projectNotebook.ipynb
+++ b/projectNotebook.ipynb
@@ -2261,12 +2261,14 @@
     "models_params = [(\n",
     "    linear_model.LinearRegression, {'fit_intercept':[True,False], 'normalize':[True,False], 'copy_X':[True, False]}), \n",
     "    (linear_model.Lasso, {'alpha': alphas, 'fit_intercept': [True, False]}), \n",
-    "    (linear_model.ElasticNet, {'alpha': alphas, 'fit_intercept': [True, False]})]\n",
+    "    (linear_model.ElasticNet, {'alpha': alphas, 'fit_intercept': [True, False], 'normalize': [True, False]})]\n",
     "\n",
     "for m,p in models_params:\n",
     "    bp = performLinearGridSearch(m, p)\n",
     "    if m == linear_model.Lasso:\n",
     "        model = linear_model.Lasso(alpha=0.0137, fit_intercept=True)\n",
+    "    elif m == linear_model.ElasticNet:\n",
+    "        model = linear_model.ElasticNet(alpha=0.00148, fit_intercept=True, normalize=False)\n",
     "    else:\n",
     "        model = m(bp)\n",
     "\n",
@@ -2274,11 +2276,7 @@
     "    model.fit(train[all_features], train[target])\n",
     "    predicted = model.predict(test[all_features])\n",
     "    computeScore(test[target], predicted)\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n"
+    "    "
    ]
   },
   {
@@ -2332,7 +2330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
